--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
+    "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
