--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
