--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "page-builder",
+  "homepage": "https://oricardos.github.io/landingpagemaker/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,9 +19,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
+    "gh-pages": "^6.2.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
-    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
@@ -32,6 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
